changed config files

--- a/config/midnight-grt-debug.props
+++ b/config/midnight-grt-debug.props
@@ -9,7 +9,7 @@
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\MidnightCommercial\Cinder\blocks\midnight-grt\libs\grt\lib\Release\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\MidnightCommercial\Cinder\blocks\midnight-grt\libs\grt\lib\Debug\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>grt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ProjectReference>
